--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,14 @@
     "name": "sandex/PhemoWidgetsBundle",
     "version": "0.9.0",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "components/jquery": "2.1.0",
+        "twitter/bootstrap": "3.0.*@dev"        
     },
+    "config": {
+        "component-dir": "public/assets",
+        "component-baseurl": "/assets"
+    },    
     "autoload": {
         "psr-0": {
             "PhemoWidgetsBundle": ""
