--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "version": "0.9.0",
     "require": {
         "php": ">=5.3.0",
-        "components/jquery": "2.1.0",
+        "components/jquery": "2.*",
         "components/activity-indicator": "*",
-        "components/bootstrap": "3.1.1"
+        "components/bootstrap": "3.*"
     },
     "autoload": {
         "psr-0": {
