--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "require": {
         "php": ">=5.3.0",
         "components/jquery": "2.*",
-        "components/activity-indicator": "*",
+        "components/activity-indicator": "1.*",
         "components/bootstrap": "3.*"
     },
     "autoload": {
